@@ -42,7 +42,7 @@
 #include <algorithm>
 #include <cassert>
 
-#include <cmtkSafeCounter.h>
+#include <cmtkSmartConstPtr.h>
 
 namespace
 cmtk
@@ -55,10 +55,15 @@ cmtk
  */
 template<class T>
 class SmartPointer
+    /// Inherit from smart pointer-to-const.
+  : public SmartConstPointer<T>
 {
 public:
   /// This class instance.
   typedef SmartPointer<T> Self;
+
+  /// This class instance.
+  typedef SmartConstPointer<T> Superclass;
 
   /// The underlying raw pointer type.
   typedef T* PointerType;
@@ -66,153 +71,61 @@ public:
   /// Null object.
   static Self Null;
   
-  /// Get current reference counter value: use with caution!
-  unsigned int GetReferenceCount() const 
-  { 
-    return this->m_ReferenceCount->Get(); 
-  }
-
   /** Construct from dumb pointer.
    * Note that you MUST NEVER use this constructor more than once for each
    * dumb pointer, other than NULL!
    */
-  explicit SmartPointer( T *const object = NULL ) 
-    : m_Object( object )
-  { 
-    this->m_ReferenceCount = new SafeCounter( 1 );
-  }
+  explicit SmartPointer( T *const object = NULL ) : SmartConstPointer<T>( object ) {}
 
   /** Copy constructor template.
    * Increment reference counter in the process.
    */
   template<class T2>
-  SmartPointer( const SmartPointer<T2>& ptr ) 
-    : m_ReferenceCount( ptr.m_ReferenceCount ),
-      m_Object( ptr.m_Object )
-  {
-    this->m_ReferenceCount->Increment();
-  }
+  SmartPointer( const SmartPointer<T2>& ptr ) : SmartConstPointer<T>( ptr ) {}
   
   /** Copy constructor to prevent compiler-generated copy constructor.
    * Increment reference counter in the process.
    */
-  SmartPointer( const Self& ptr ) 
-    : m_ReferenceCount( ptr.m_ReferenceCount ),
-      m_Object( ptr.m_Object )
-  {
-    this->m_ReferenceCount->Increment();
-  }
+  SmartPointer( const Self& ptr ) : SmartConstPointer<T>( ptr ) {}
   
-  /// Destruct: decrease reference pointer and free dumb pointer if necessary.
-  ~SmartPointer() 
-  {
-    assert( this->m_ReferenceCount != NULL ); // we may have m_Object=NULL, but m_ReferenceCount should never be!
-    if ( ! this->m_ReferenceCount->Decrement() ) 
-      {
-      delete this->m_ReferenceCount;
-#ifdef DEBUG
-      this->m_ReferenceCount = NULL;
-#endif
-      if ( this->m_Object ) 
-	{
-	delete this->m_Object;
-#ifdef DEBUG
-	this->m_Object = NULL;
-#endif
-	}
-      }
-  }
-
   /// De-referencing operator (returns non-constant object).
-  T& operator*() { return *this->m_Object; }
+  T& operator*() { return *this->m_Object.ptr; }
 
-  /// De-referencing operator (returns constant object).
-  const T& operator*() const { return *this->m_Object; }
+  using Superclass::operator*;
+  using Superclass::operator->;
+  using Superclass::GetPtr;
+  using Superclass::ReleasePtr;
 
   /// De-referencing operator (returns non-constant object pointer).
-  T* operator->() { return this->m_Object; }
+  T* operator->() { return this->m_Object.ptr; }
 
-  /// De-referencing operator (returns constant object pointer).
-  const T* operator->() const { return this->m_Object; }
-
-  /// Implicit conversion to constant pointer.
-  operator const T*() const { return m_Object; }
-  
   /// Explicit conversion to non-constant pointer.
-  T* GetPtr() { return this->m_Object; }
-
-  /// Explicit conversion to constant pointer.
-  const T* GetPtr() const { return this->m_Object; }
+  T* GetPtr() { return this->m_Object.ptr; }
 
   /** Release control of this pointer.
    *\note This is a dangerous function. Be sure you know what you are doing!
    */
   T* ReleasePtr() 
   { 
-    T* object = this->m_Object; 
-    this->m_Object = NULL; 
+    T* object = this->m_Object.ptr; 
+    this->m_Object.ptr = NULL; 
     return object; 
   }
 
-  /** Assignment operator.
-   * This is implemented using the std::swap function.
-   *\warning The "other" parameter HAS TO USE CALL BY VALUE for this function to work,
-   *  because we are not creating an explicit copy of the original object before 
-   *  calling Swap() (see Effective C++, 3rd, Item 11, p.56).
-   *\warning Open question: given that we pass the parameter by value, not reference, does
-   *  this really prevent the definition of a compiler-generated assignment (which passes
-   *  parameter by reference)?
-   */
-  const Self& operator= ( const Self other ) const
-  {
-    using std::swap;
-    swap( this->m_ReferenceCount, other.m_ReferenceCount );
-    swap( this->m_Object, other.m_Object );
-
-    return *this;
-  }
-
-  /** Equality operator using pointer.
-   */
-  bool operator== ( const Self& other ) const 
-  {
-    return (this->m_Object == other.m_Object);
-  }
-  
-  /** Inequality operator.
-   */
-  bool operator!= ( const Self& other ) const 
-  {
-    return (this->m_Object != other.m_Object);
-  }
-  
-  /** "Smaller than" operator (necessay for storing objects in std::map).
-   */
-  bool operator< ( const Self& other ) const 
-  {
-    return ( this->m_Object < other.m_Object );
-  }
-  
   ///Dynamic cast between smart pointer types.
   template<class T2> 
   static Self DynamicCastFrom( const T2& from_P )
   {
-    return Self( dynamic_cast<typename Self::PointerType>( from_P.m_Object ), from_P.m_ReferenceCount );
+    return Self( dynamic_cast<typename Self::PointerType>( from_P.m_Object.ptr ), from_P.m_ReferenceCount );
   }
 
 private:
-  /// Pointer to detached reference counter for this object.
-  mutable SafeCounter* m_ReferenceCount;
-  
-  /// Pointer for reference-counted object.
-  mutable T* m_Object;
-  
   /** Construct from dumb pointer and existing reference counter.
    * The reference counter is increased in the process.
    */
   SmartPointer( T *const object, SafeCounter *const counter ) 
   {
-    this->m_Object = object;
+    this->m_Object.ptr = object;
     this->m_ReferenceCount = counter;
     this->m_ReferenceCount->Increment();
   }
